# embedding-api

./: .gitignore  README.md  pyproject.toml  pytest-config.ini
src/: main.py  modules.py  schema.py
tests/: test_api.py
